Lưu tạm các thay đổi trước khi checkout nhánh dashboard

--- a/src/main/resources/templates/instructorDashboard/fragments/header.html
+++ b/src/main/resources/templates/instructorDashboard/fragments/header.html
@@ -1,5 +1,5 @@
-<div th:fragment="header">
-    <head>
+
+    <head th:fragment="header">
 
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -18,4 +18,3 @@
         <!-- Custom styles for this template-->
         <link th:href="@{/css/sb-admin-2.min.css}" rel="stylesheet">
     </head>
-</div>
