--- a/src/main/resources/templates/instructorDashboard/CreateCourseStep4.html
+++ b/src/main/resources/templates/instructorDashboard/CreateCourseStep4.html
@@ -83,7 +83,7 @@
 
             <div class="content-card">
               <div class="d-flex justify-content-between">
-                <form th:action="@{/instructordashboard/viewcourse/addcourse/step3}" method="GET">
+                <form th:action="@{/instructordashboard/viewcourse/addcoursestep3}" method="POST">
                 <button class="btn btn-outline-secondary">
                   <i class="bi bi-arrow-left me-1"></i> Previous
                 </button>
