--- a/src/main/resources/templates/adminDashboard/fragments/category.html
+++ b/src/main/resources/templates/adminDashboard/fragments/category.html
@@ -70,7 +70,8 @@
                     <tbody>
                         <tr th:each="category,stat : ${categories}">
                             <td th:text="${stat.index + 1}"></td>
-                            <td th:text="${category.name}"></td>
+                            <td><a th:href="@{/admin/categories/showmore(id=${category.id})}"
+                                    th:text="${category.name}"></a></td>
                             <td>
                                 <a th:href="@{/admin/categories/edit(id=${category.id}, page=${currentPage}, sort=${sort}, name=${name})}"
                                     class="edit" title="Edit" data-toggle="tooltip"><i
