view course detail, watch video course completed

--- a/src/main/resources/templates/instructorDashboard/CreateCourseStep3.html
+++ b/src/main/resources/templates/instructorDashboard/CreateCourseStep3.html
@@ -81,8 +81,7 @@
 
             <div class="content-card">
               <div class="d-flex justify-content-between">
-                <button class="btn btn-outline-secondary" name="action" value="previousstep" type="button"
-                        onclick="window.location.href='/instructordashboard/viewcourse/addcoursestep2'">
+                <button class="btn btn-outline-secondary" name="action" value="previousstep">
                   <i class="bi bi-arrow-left me-1"></i> Previous
                 </button>
                   <button class="btn btn-outline-secondary me-2" id="saveDraftBtn" name="action" value="draft">
