--- a/src/main/resources/templates/instructorDashboard/fragments/sidebar.html
+++ b/src/main/resources/templates/instructorDashboard/fragments/sidebar.html
@@ -2,7 +2,7 @@
     <ul  class="navbar-nav bg-gradient-primary sidebar sidebar-dark accordion" id="accordionSidebar">
 
         <!-- Sidebar - Brand -->
-        <a class="sidebar-brand d-flex align-items-center justify-content-center" th:href="@{/instructordashboard}">
+        <a class="sidebar-brand d-flex align-items-center justify-content-center" th:href="@{/instructordashboard/viewcourse}">
             <div class="sidebar-brand-icon rotate-n-15">
                 <i class="fas fa-laugh-wink"></i>
             </div>
@@ -14,7 +14,7 @@
 
         <!-- Nav Item - Dashboard -->
         <li class="nav-item active">
-            <a class="nav-link" th:href="@{/instructordashboard}">
+            <a class="nav-link" th:href="@{/instructordashboard/viewcourse}">
                 <i class="fas fa-fw fa-tachometer-alt"></i>
                 <span>Dashboard</span></a>
         </li>
@@ -41,10 +41,6 @@
                 <div class="bg-white py-2 collapse-inner rounded">
                     <h6 class="collapse-header">Custom Course:</h6>
                     <a class="collapse-item" th:href="@{/instructordashboard/viewcourse}">My Course</a>
-                    <a class="collapse-item" href="utilities-border.html">Orders & Payments</a>
-                    <a class="collapse-item" href="utilities-animation.html">Analytics & Reports</a>
-                    <a class="collapse-item" href="utilities-other.html">Review & FeedBack</a>
-                    <a class="collapse-item" href="utilities-other.html">Quiz</a>
                 </div>
             </div>
         </li>
@@ -56,9 +52,6 @@
         <div class="text-center d-none d-md-inline">
             <button class="rounded-circle border-0" id="sidebarToggle"></button>
         </div>
-
-        <!-- Sidebar Message -->
-
     </ul>
 
 </div>
